grammar.js
    source_file: ($) => seq(
      $.package_clause,
      $._terminator,
      repeat(seq($.import_declaration, $._terminator)),
      repeat(seq($._top_level_declaration, $._terminator)),
    ),

    package_clause: ($) => seq('package', field('name', packageIdentifier($))),

    import_declaration: ($) => seq('import', choice($.import_spec, seq('(', terminated($, $.import_spec), ')'))),

    import_spec: ($) => seq(
      optional(choice(
        field('name', alias('.', $.dot)),
        seq(field('name', choice(alias('_', $.blank_identifier), packageIdentifier($))), $._same_line),
      )),
      field('path', $._string_literal),
    ),

    _top_level_declaration: ($) => choice($._declaration, $.function_declaration, $.method_declaration),

    const_declaration: ($) => seq('const', choice($.const_spec, seq('(', terminated($, $.const_spec), ')'))),

    const_spec: ($) => seq(
      commaSep1(field('name', $.identifier)),
      optional(field('type', $._type)),
      optional(seq('=', field('value', $.expression_list))),
    ),

    var_declaration: ($) => seq('var', choice($.var_spec, seq('(', terminated($, $.var_spec), ')'))),

    var_spec: ($) => seq(
      elementList($, field('name', $.identifier)),
      $._same_line,
      choice(
        seq(field('type', $._type), optional(seq('=', field('value', $.expression_list)))),
        seq('=', field('value', $.expression_list)),
      ),
    ),

    type_declaration: ($) => seq('type', choice(
      $.type_definition,
      $.alias_declaration,
      seq('(', terminated($, choice($.type_definition, $.alias_declaration)), ')'),
    )),

    function_declaration: ($) => seq(
      'func',
      field('name', $.identifier),
      $._same_line,
      optional(typeParametersOnTheLine($)),
      field('parameters', $.parameters),
      optional(field('result', $._result)),
      optional(seq($._brace_on_same_line, field('body', $.block))),
    ),

    method_declaration: ($) => seq(
      'func',
      field('receiver', alias($.receiver, $.parameters)),
      $._same_line,
      field('name', fieldIdentifier($)),
      $._same_line,
      optional(typeParametersOnTheLine($)),
      field('parameters', $.parameters),
      optional(field('result', $._result)),
      optional(seq($._brace_on_same_line, field('body', $.block))),
    ),

    type_parameter_declaration: ($) => seq(
      elementList($, field('name', typeIdentifier($))),
      field('constraint', $.type_elem),
    ),

    parameter_declaration: ($) => seq(elementList($, field('name', $.identifier)), field('type', $._type)),

    variadic_parameter_declaration: ($) => seq(field('name', $.identifier), '...', field('type', $._type)),

    _result: ($) => choice($.parameters, $._simple_type),

    _type: ($) => choice($._simple_type, $.parenthesized_type),

    _type_name: ($) => choice(typeIdentifier($), $.qualified_identifier),

    generic_type: ($) => seq(field('type', $._type_name), field('type_arguments', $.type_arguments)),

    type_arguments: ($) => seq('[', closedElementList($, $._type), ']'),

    pointer_type: ($) => prec(PREC.UNARY, seq('*', $._type)),

    array_type: ($) => prec.right(seq(
      '[',
      field('length', $._expression),
      $._element_end,
      ']',
      $._same_line,
      field('element', $._type),
    )),

    slice_type: ($) => prec.right(seq('[', ']', $._same_line, field('element', $._type))),

    map_type: ($) => prec.right(seq(
      'map',
      '[',
      field('key', $._type),
      $._element_end,
      ']',
      $._same_line,
      field('element', $._type),
    )),

    function_type: ($) => prec.right(seq(
      'func',
      field('parameters', $.parameters),
      optional(field('result', $._result)),
    )),

    struct_type: ($) => seq('struct', '{', terminated($, $.field_declaration), '}'),

    field_declaration: ($) => seq(
      choice(
        seq(commaSep1(field('name', fieldIdentifier($))), optional($._line_continues), field('type', $._type)),
        field('type', $._embedded_type),
      ),
      optional(field('tag', $._string_literal)),
    ),

    _embedded_type: ($) => choice(
      $._type_name,
      $.generic_type,
      alias($._embedded_pointer_type, $.pointer_type),
    ),

    interface_type: ($) => seq('interface', '{', terminated($, choice($.method_elem, $.type_elem)), '}'),

    method_elem: ($) => seq(
      field('name', fieldIdentifier($)),
      field('parameters', $.parameters),
      optional(field('result', $._result)),
    ),

    type_elem: ($) => seq($._type_term, repeat(seq('|', $._type_term))),

    _type_term: ($) => choice($._type, $.underlying_type),

    underlying_type: ($) => seq('~', $._type),

    block: ($) => seq('{', optional($._block_statement_list), '}'),

    _block_statement_list: ($) => statementList($, [$._statement, alias($.empty_labeled_statement, $.labeled_statement)]),

    return_statement: ($) => seq('return', optional(field('result', $.expression_list))),

    _string_literal: ($) => choice($.raw_string_literal, $.interpreted_string_literal),

    raw_string_literal: ($) => seq(
      '`',
      optional(alias($._raw_string_content, $.string_content)),
      token.immediate('`'),
    ),

    _raw_string_content: (_) => token.immediate(prec(1, /[^`]+/)),

    interpreted_string_literal: ($) => seq(
      '"',
      repeat(choice(alias($._interpreted_string_content, $.string_content), $.escape_sequence)),
      token.immediate('"'),
    ),

    _interpreted_string_content: (_) => token.immediate(prec(1, /[^"\\\n]+/)),

    int_literal: (_) => token(new RegExp(INT_LITERAL)),

    float_literal: (_) => token(new RegExp(FLOAT_LITERAL)),

    // constraint: both parsers check the digits against the base for an integer literal only, so `0b9i` is valid
    identifier: (_) => /[_\p{L}][_\p{L}\p{Nd}]*/,

    _terminator: ($) => choice(';', $._automatic_semicolon),
